Change to OpenSearch 3.8.0 / Lucene 10.5.0, version 3.8.0-wmf1, Java 21
Set opensearch.version=3.8.0, lucene.version=10.5.0, project and parent
version 3.8.0-wmf1, and maven.compiler.source and target to 21. The
plugin-descriptor.properties files refer to these with Maven property
filtering, thus they get the new versions automatically. The OpenSearch
server runs on Java 21, thus the compiler target stays at 21.

forbiddenapis:
- Change wmf-jvm-parent-pom to 1.102. The previous lucene-signatures.txt
  didn't like lucene 10.

Serbian:
- Replace new Locale() with Locale.of(), jdk-deprecated-21 signatures flag it.
  Locale.of(...) is available from Java 19 and is the direct replacement.

Bug: T435823
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Change-Id: Ie4a14ca0b585cebed70ec94083e51a6861d3cea0